update build file